# ETS_FEM_Kernel

./: .gitignore  CMakeLists.txt  OPTIM_ROUTINE.md  PLAN.md  PROMPT.md  README.md  SUMMARY.md  electrostatics_1d_results.vtk  electrostatics_2d_results.vtk  electrostatics_3d_results.vtk  heat_1d_results.vtk  heat_2d_results.vtk  heat_3d_results.vtk  test_heat_transfer.vtk
app/: main.cpp
data/: electroOnlyResults_3D.vtu  electroThermalResults_3D.vtu  thermalOnlyResults_3D.vtu
docs/: SUMMARY.md
docs/fem/: README.md
docs/fem/bcs/: README.md
docs/fem/bcs/classes/: CauchyBC.md  DirichletBC.md  NeumannBC.md
docs/fem/core/: README.md
docs/fem/core/classes/: AnalysisTypes.md  BoundaryCondition.md  DofManager.md  FEFaceValues.md  FEValues.md  FiniteElement.md  LinearSolver.md  Problem.md  QuadraturePoint.md  ReferenceElement.md
docs/fem/io/: README.md
docs/fem/io/classes/: Exporter.md  Importer.md
docs/fem/kernels/: README.md
docs/fem/kernels/classes/: ElectrostaticsKernel.md  HeatCapacityKernel.md  HeatDiffusionKernel.md  Kernel.md  KernelWrappers.md
docs/fem/materials/: README.md
docs/fem/materials/classes/: Material.md  MaterialProperty.md
docs/fem/mesh/: README.md
docs/fem/mesh/classes/: Boundary.md  BoundaryDefinition.md  Element.md  Geometry.md  Mesh.md  Node.md
docs/fem/physics/: README.md
docs/utils/: README.md
docs/utils/classes/: InterpolationUtilities.md  Profiler.md  Quadrature.md  ShapeFunctions.md  SimpleLogger.md
fem/bcs/: CauchyBC.hpp  DirichletBC.hpp  NeumannBC.hpp
fem/core/: AnalysisTypes.hpp  BoundaryCondition.hpp  DofManager.cpp  DofManager.hpp  FEFaceValues.hpp  FEValues.hpp  FiniteElement.hpp  LinearSolver.hpp  Problem.hpp  QuadraturePoint.hpp  ReferenceElement.hpp
fem/io/: Exporter.cpp  Exporter.hpp  Importer.cpp  Importer.hpp
fem/kernels/: ElectrostaticsKernel.hpp  HeatCapacityKernel.hpp  HeatDiffusionKernel.hpp  Kernel.hpp  KernelWrappers.hpp
fem/materials/: Material.cpp  Material.hpp  MaterialProperty.hpp
fem/mesh/: Boundary.hpp  BoundaryDefinition.hpp  Element.hpp  Geometry.hpp  Mesh.cpp  Mesh.hpp  Node.hpp
fem/physics/: Electrostatics.hpp  HeatTransfer.hpp  PhysicsField.hpp
tests/: self_contained_test_electrostatics.cpp  self_contained_test_heat_transfer.cpp  test_electrostatics.cpp  test_electrostatics_imported_mesh.cpp  test_element_stiffness_matrix.cpp  test_frequency_domain_heat.cpp  test_heat_transfer.cpp  test_material.cpp  test_mixed_bcs.cpp  test_utils.hpp  test_vtu_importer.cpp
utils/: InterpolationUtilities.hpp  Profiler.cpp  Profiler.hpp  Quadrature.hpp  ShapeFunctions.hpp
(+3 files in other folders)
